[package]
name = "ao3_wrapped"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Jack Hogan"]

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive"] }
polars = { version = "0.52.0", features = ["lazy", "timezones"] }
reqwest = { version = "0.12.24", features = ["cookies"] }
rpassword = "7.4.0"
scraper = "0.24.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full", "macros", "rt"] }
